--- a/index.html
+++ b/index.html
@@ -4077,6 +4077,22 @@
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>
+        // Visual debugging
+window.onerror = function(msg, url, line, col, error) {
+    document.body.insertAdjacentHTML('beforeend', 
+        '<div style="background:red;color:white;padding:10px;margin:5px;font-size:14px;word-break:break-all;z-index:99999;position:relative;">' +
+        'ERROR: ' + msg + '<br>Line: ' + line + '</div>');
+    return false;
+};
+
+console.log = function(...args) {
+    document.body.insertAdjacentHTML('beforeend', 
+        '<div style="background:yellow;padding:5px;margin:2px;font-size:12px;z-index:99999;position:relative;">' + 
+        args.join(' ') + '</div>');
+};
+console.error = console.log;
+
+console.log('Script started loading...');
         let currentDate = new Date();
         let currentView = 'month';
         let currentSection = 'calendar';
