--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         }
 
         .date-weather-line {
-            display: flex;
+            display: none;
             align-items: baseline;
             gap: 15px;
             font-size: 32px;
