small css, fixed list box & recipes look/feel

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="nav-sidebar">
             <div class="nav-item active" onclick="switchSection('calendar')">
                 <div class="nav-icon icon-calendar"></div>
-                <div>Test Current</div>
+                <div>Calendar</div>
             </div>
             <div class="nav-item" onclick="switchSection('chores')">
                 <div class="nav-icon icon-tasks"></div>
