--- a/index.html
+++ b/index.html
@@ -1316,6 +1316,7 @@
 <script src="auto-sync-wrapper.js"></script>
 <!-- Google Calendar OAuth Module -->
 <script src="google-calendar-oauth.js"></script>
+<script src="config.js"></script>
 <script src="script.js"></script>
 <script src="supabase-init.js"></script>
 <!-- =============================================
