--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="nav-sidebar">
             <a href="#/calendar" class="nav-item active">
                 <div class="nav-icon icon-calendar"></div>
-                <div>Calendar</div>
+                <div>CAAAalendar</div>
             </a>
             <a href="#/chores" class="nav-item">
                 <div class="nav-icon icon-tasks"></div>
