Update script tags for Google Calendar integration

--- a/index.html
+++ b/index.html
@@ -1311,9 +1311,8 @@
 <script src="supabase-sync.js"></script>
 <script src="auto-sync-wrapper.js"></script>
 <!-- Google Calendar OAuth Module -->
- <script src="config.js"></script>
-<script src="google-calendar-oauth.js"></script>
-<script src="script.js"></script>
+<script src="google-calendar-service-account.js"></script>
+    <script src="script.js"></script>
 <script src="supabase-init.js"></script>
 <!-- =============================================
      MOBILE STRUCTURE
