--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="https://cdn.jsdelivr.net/npm/@twemoji/api@latest/dist/twemoji.min.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
+    <link rel="stylesheet" href="habits.css">
+    <link rel="stylesheet" href="profile-dashboard.css">
     <!-- Supabase -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
@@ -1322,6 +1324,8 @@
 <script src="google-calendar-service-account.js"></script>
     <script src="script.js"></script>
 <script src="supabase-init.js"></script>
+<script src="habits.js"></script>
+<script src="profile-dashboard.js"></script>
 <!-- =============================================
      MOBILE STRUCTURE
      Add to your index.html body
