--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                 </div>
             </div>
             
-            <button class="edit-save-btn" onclick="saveEvent()">Add Event</button>
+            <button class="edit-save-btn" id="eventSaveBtn" onclick="saveEvent()">Add Event</button>
         </div>
     </div>
 
